updates for alertmanager

--- a/Ansible/playbooks/templates/index.html.j2
+++ b/Ansible/playbooks/templates/index.html.j2
@@ -101,6 +101,7 @@
     <div class="hero">
         <h1>{{ app_name }}</h1>
         <p>Automated Deployment with <span class="ansible-logo">Ansible</span> ⚙️</p>
+        <h2>Made by  <span class="ansible-logo">Seif Yakout</span> 👨🏻‍💻</h2>
     </div>
 
     <div class="container">
